--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<li><a href="https://www.djangoproject.com/">Djangoproject</a></li>
 			<li>HTML and CSS Tutorials on w3schools</li>
             <li>JavaScript by learnjavascript.ru</li>
-            <li><a href="https://rs.school/RS">Schools JavaScript/Front-end</li>
+            <li><a href="https://rs.school/">RS.school JavaScript/Front-end</li>
           </ul>
         </section>           
       </aside>
