--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           </div>
           <ul>
             <li><a href="https://ellionis.online/">django: RegDance for Ellionis dance school</a></li>
+			<li><a href="http://polls.j1045543.myjino.ru/">django: Polls, create 3 types of polls and view vote results</a></li>
 			<li><a href="http://petshop.j1045543.myjino.ru/">django: PetShop e-commerce</a></li>
-            <li>django: MyCosmetics social network</li>
             <li><a href="https://github.com/MariannaIU/wishlist">django: WishList app</a></li>
           </ul>
         </section>
@@ -121,7 +121,7 @@
           <div class="sub-header">
             <h3>Курсы</h3>
           </div>
-          <ul>
+          <ul>s
             <li><a href="https://letpy.com">Python letpy.com</a></li>
 			<li><a href="https://www.djangoproject.com/">Djangoproject</a></li>
 			<li>HTML and CSS Tutorials on w3schools</li>
