--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
             <h3>Мои работы</h3>
           </div>
           <ul>
-            <li><a href="https://ellionis.online/">django: RegDance for Ellionis dance school</a></li>
 			<li><a href="http://polls.j1045543.myjino.ru/">django: Polls, create 3 types of polls and view vote results</a></li>
 			<li><a href="http://petshop.j1045543.myjino.ru/">django: PetShop e-commerce</a></li>
+			<li><a href="https://ellionis.online/">django: RegDance for Ellionis dance school</a></li>
+			<li><a href="http://posts.j1045543.myjino.ru/">django: Module JSON file to DB and search by all fields</a></li>
             <li><a href="https://github.com/MariannaIU/wishlist">django: WishList app</a></li>
           </ul>
         </section>
