--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@
             <h3>Обо мне</h3>
           </div>
 		  <ul>
-		  <li> 10 летний опыт в сфере IT</li>
-		  <li> Опыт работы в игровой индустрии более 3 лет</li>
-		  <li> Более 2 лет опыта в разработке сайтов и веб-приложений, </li>
+		  <li> Более года опыта разработки сайтов и веб-приложений в роли back-end разработчика</li>
+		  <li> Более 5 лет опыта в сфере IT в госсекторе(администрирование серверов и БД)</li>
 		  <li> Разработка архитектуры приложения, проектирование БД </li>
 		  <li> Развертывание сайта на сервере, запуск в боевом режиме, решение вопросов с хостингом и доменом</li>
-		  <li> Работала в роли back-end разработчика, fullstack разработчика, level-дизайнера, системного администратора</li>
+		  <li> Опыт работы в игровой индустрии более 3 лет(гейм дизайнер, level-дизайнер)</li>
 		  </ul>
         </section>
         <section class="skills">
@@ -111,12 +110,11 @@
             <h3>Мои работы</h3>
           </div>
           <ul>
-			<li><a href="http://polls.j1045543.myjino.ru/">django: Polls, create 3 types of polls and view vote results</a></li>
-			<li><a href="http://petshop.j1045543.myjino.ru/">django: PetShop e-commerce</a></li>
-			<li><a href="https://ellionis.online/">django: RegDance for Ellionis dance school</a></li>
-			<li><a href="http://posts.j1045543.myjino.ru/">django: Loading posts(JSON)to DB and search by all fields</a></li>
-            <li><a href="https://github.com/MariannaIU/wishlist">django: WishList app</a></li>
-          </ul>
+			<li><a href="https://ellionis.online/">django: Форма регистрации участников для спортивных турниров</a></li>
+			<li><a href="http://polls.j1045543.myjino.ru/">django: Форма для проведения опросов, создание опросов разных типов и просмотр результатов</a></li>
+			<li><a href="http://petshop.j1045543.myjino.ru/">django: Магазин товаров для животных</a></li>
+            <li><a href="https://github.com/MariannaIU/wishlist">django: Вишлист сохранение карточек товаров</a></li>
+		  </ul>
         </section>
         <section class="courses">
           <div class="sub-header">
