--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 
-
 <body>
   <div class="container-centered">
     <div class="two-columns">
       <div class="left-column">
         <header>
           <img src="./images/Portrait.jpg" alt="Portrait" width="204" height="204">
-          <h1>Марианна Юзвович</h1>
-          <h2>Разработчик Python/Django</h2>
+          <h1>Marianna Iuzvovich</h1>
+          <h2>Python/Django developer</h2>
         </header>
         <main>
           <section class="contacts">
-            <h3>Контакты</h3>
+            <h3>Contacts</h3>
             <ul>
               <li>
                 <img src="./icons/phone.svg" alt="Phone Icon" width="30" height="30">
@@ -53,7 +52,7 @@
             </ul>
           </section>
           <section class="languages">
-            <h3>Языки</h3>
+            <h3>Languages</h3>
             <ul>
               <li>
                 <p class="language-name">English Intermediate</p>
@@ -67,31 +66,32 @@
             </ul>
           </section>
 		  <section class="skills">
-            <h3>Образование</h3>
-			<p><strong>Высшее техническое образование<br>
-			 БФУ им.И.Канта (Калининград)</strong></p>
-			<p>Физический факультет</p>
+            <h3>Education</h3>
+			<p><strong>Higher Technical Education<br>
+			 Immanuel Kant Baltic Federal University<br>
+			 (Kaliningrad, Russia)</strong></p>
+			<p>Physics faculty</p>
 			<p>2001 - 2006</p>
-			<p>Специальность: Радиофизик</p>
+			<p>Radiophysics - Computer electronics and informational technologies</p>
           </section>
         </main>
       </div>
       <aside class="right-column">
         <section class="about-myself">
           <div class="sub-header">
-            <h3>Обо мне</h3>
+            <h3>About myself</h3>
           </div>
 		  <ul>
-		  <li> Более года опыта разработки сайтов и веб-приложений в роли back-end разработчика</li>
-		  <li> Более 5 лет опыта в сфере IT в госсекторе(администрирование серверов и БД)</li>
-		  <li> Разработка архитектуры приложения, проектирование БД </li>
-		  <li> Развертывание сайта на сервере, запуск в боевом режиме, решение вопросов с хостингом и доменом</li>
-		  <li> Опыт работы в игровой индустрии более 3 лет(гейм дизайнер, level-дизайнер)</li>
+		  <li> Development sites and web-apps as back-end developer: more than a year of experience</li>
+		  <li> IT-specialist in State court of Arbitration (devops&technical support): more than 5 years of experience</li>
+		  <li> Application architecture development, database design</li>
+		  <li> Deploying a site on a server, resolving issues with hosting and domain</li>
+		  <li> Game Development - working as level-designer, game-designer: more than 2 years of experience</li>
 		  </ul>
         </section>
         <section class="skills">
           <div class="sub-header">
-            <h3>Навыки</h3>
+            <h3>Skills</h3>
           </div>
           <ul>
               <li>Python</li>
@@ -101,31 +101,31 @@
 			  <li>HTML5, CSS3, Bootstrap</li>
               <li>Git, GitHub</li>
               <li>PyCharm, VS Code</li>
-			  <li>HEROKU, JINO Deploy</li>
+			  <li>HEROKU, JINO Deployment</li>
               <li>Adobe Photoshop</li>
             </ul>
         </section>
 		<section class="courses">
           <div class="sub-header">
-            <h3>Мои работы</h3>
+            <h3>My works</h3>
           </div>
           <ul>
-			<li><a href="https://ellionis.online/">django: Форма регистрации участников для спортивных турниров</a></li>
-			<li><a href="http://polls.j1045543.myjino.ru/">django: Форма для проведения опросов, создание опросов разных типов и просмотр результатов</a></li>
-			<li><a href="http://petshop.j1045543.myjino.ru/">django: Магазин товаров для животных</a></li>
-            <li><a href="https://github.com/MariannaIU/wishlist">django: Вишлист сохранение карточек товаров</a></li>
-		  </ul>
+			<li><a href="https://youtu.be/r2BBwy7sRdQ">django: Online Registration form for sports competitions - VIDEO REVIEW</a></li>
+            <li><a href="https://ellionis.online/">django: Online Registration form for sports competitions - SITE</a></li>
+			<li><a href="http://polls.j1045543.myjino.ru/">django: Creating polls of various types and viewing the results</a></li>
+			<li><a href="http://petshop.j1045543.myjino.ru/">django: Online pet shop</a></li>
+          </ul>
         </section>
         <section class="courses">
           <div class="sub-header">
-            <h3>Курсы</h3>
+            <h3>Additional Education</h3>
           </div>
           <ul>
             <li><a href="https://letpy.com">Python letpy.com</a></li>
 			<li><a href="https://www.djangoproject.com/">Djangoproject</a></li>
 			<li>HTML and CSS Tutorials on w3schools</li>
             <li>JavaScript by learnjavascript.ru</li>
-            <li><a href="https://rs.school/">RS.school JavaScript/Front-end</li>
+            <li><a href="https://rs.school/RS">Schools JavaScript/Front-end</li>
           </ul>
         </section>           
       </aside>
